--- a/css/style.css
+++ b/css/style.css
@@ -502,6 +502,7 @@ nav ul li a:hover {
     max-width: var(--breakpoint-extra-large);
     height: auto;
     margin: auto;
+    justify-items: center;
 }
 .video-background {
     position: absolute;
@@ -575,11 +576,12 @@ nav ul li a:hover {
 #projects .projects {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(min(100%, 250px), 1fr));
-    grid-gap: 28px;
+    grid-gap: 80px 40px;
     max-width: var(--breakpoint-extra-large);
     /* justify-content: space-around; */
     height: auto;
     margin: auto;
+    justify-items: center;
 }
 #projects .video-proj {
     position: absolute;
@@ -588,7 +590,7 @@ nav ul li a:hover {
     left: 0px;
 }
 .card-proj{
-    width: 320px;
+    width: 300px;
     border-radius: 10px;
     transition: all ease-in 0.2s;
     border: solid 1px #aaa;
