--- a/css/blog.css
+++ b/css/blog.css
@@ -40,7 +40,6 @@
 .blog-card {
     display: flex;
     width: 100%;
-    /* height: 200px; */
     max-width: 800px;
     padding: 10px 10px;
     border-radius: 12px;
@@ -92,11 +91,15 @@
         padding: 0 14px;
         padding-top: 60px;
     }
-
+    .titulo  h1{
+        height: auto;
+        padding: 10px 0px;
+    }
     .blog-card {
         width: 100%;
-        height: 84px;
+        height: 100px;
         border-radius: 8px;
+        overflow: hidden;
     }
 
     .blog-card img {
@@ -110,11 +113,18 @@
     }
 
     .blogs a {
-        font-size: 14px;
+        font-size: 1rem;
         /* height: 100%; */
     }
 
     .blogs h3 {
         font-size: 13px;
+    }
+    .blogs .blog-title {
+        padding: 0px;
+
+    }
+    .blog-title h2{
+        display: none;
     }
 }
