--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -31,6 +31,14 @@
 .darkMode nav li ul {
     background-color: var(--color-nav-bgl);
 }
+
+.darkMode #home {
+    background-color: #000;
+    background-image: url(../img/bg-04.jpg);
+    transition: all .5s ease-in;
+  }
+  
+
 .darkMode #services, .darkMode #projects, .darkMode #contact{
     background-color: var(--color-bgl);
 }
@@ -49,3 +57,8 @@
 .darkMode .titulo h2{
     color: #24045c;
 }
+
+.darkMode .span2 {
+    background: linear-gradient(#76d8ffad 0%, #3172bdd2 70%);
+    transition: all .5s ease-in;
+  }
