--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -20,6 +20,9 @@
 .darkMode {
     background: var(--color-bgl);
 }
+.darkMode .head {
+    background-color: var(--colorbgl);
+}
 .darkMode .navbar{
     background-color: var(--color-nav-bgl);
     border: solid 2px var(--color-1l);
