--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,6 +7,12 @@
     }
 }
 
+@media only screen and (min-width: 1366px){
+    .video-background {
+        width: 100%;
+        height: auto;
+      }
+}
 @media only screen and (max-width: 1020px) {
     .search {
         display: none;
