--- a/css/style.css
+++ b/css/style.css
@@ -519,6 +519,7 @@ nav ul li a:hover {
 .video-background {
   position: absolute;
   height: 100%;
+  /* width: 100%; */
   top: 0px;
   left: 0px;
 }
